erDiagram
    usuarios ||--o{ fincas : "posee"
    fincas ||--o{ suscripciones_saas : "suscribe"
    fincas ||--o{ entregas_acopio : "despacha"
    fincas ||--o{ potreros : "subdivide"
    fincas ||--o{ bovinos : "alberga"
    potreros ||--o{ bovinos : "pastorea"
    razas ||--o{ bovinos : "clasifica"
    bovinos ||--o{ marcaciones : "identifica"
    bovinos ||--o{ tratamientos_sanitarios : "recibe"
    medicamentos ||--o{ tratamientos_sanitarios : "prescribe"
    bovinos ||--o{ pesajes_leche : "produce"
    bovinos ||--o{ eventos_reproductivos : "experimenta"

    usuarios {
        string id_usuario PK
        string nombre
        string email UK
        string contrasena_hash
        string rol "Administrador, Asistente, Veterinario, Operario"
        datetime fecha_registro
    }

    fincas {
        string id_finca PK
        string id_usuario FK
        string nombre_finca
        string documento_titular
        string codigo_ica_predio UK
        string municipio
    }

    suscripciones_saas {
        string id_suscripcion PK
        string id_finca FK
        string plan_tipo "Free, Pro_119k, Multi_Predio_299k"
        string estado_acceso "Activo, Solo_Lectura, Suspendido"
        int limite_vacas "15 en Free"
        date fecha_inicio
        date fecha_vencimiento
    }

    entregas_acopio {
        string id_entrega PK
        string id_finca FK
        date fecha_entrega
        decimal litros_totales
        decimal valor_bruto_est
        int recuento_ufc
        string numero_tiquete
        decimal litros_facturados
        decimal precio_litro_real
        decimal valor_pagado_real
        decimal diferencia_litros
    }

    potreros {
        string id_potrero PK
        string id_finca FK
        string nombre_potrero
        int dias_ocupacion "1 dia PRV"
        int dias_descanso_prv "35 dias PRV"
    }

    razas {
        string id_raza PK
        string nombre_raza UK
        string descripcion_proposito
    }

    bovinos {
        string id_bovino PK
        string id_finca FK
        string id_potrero FK
        string id_raza FK
        string sexo "Hembra, Macho"
        string estado_fisiologico "En_Ordeño, Horra_Seca, Novilla_Vientre, Ternero_Crecimiento, Toro_Reproductor"
        string estado_vital "Activo, Muerto, Vendido, Descarte"
        date fecha_nacimiento
    }

    marcaciones {
        string id_marcacion PK
        string id_bovino FK
        string tipo_marca "Arete_ICA, Arete_SINIGAN, Chapeta_Manejo, Hierro_Caliente, Tatuaje, Chip_RFID"
        string codigo_valor
        boolean estado_activo
    }

    medicamentos {
        string id_medicamento PK
        string nombre_farmaco UK
        int dias_retiro_ica
    }

    tratamientos_sanitarios {
        string id_tratamiento PK
        string id_bovino FK
        string id_medicamento FK
        string tipo_procedimiento
        date fecha_tratamiento
        decimal dosis_ml
    }

    pesajes_leche {
        string id_pesaje PK
        string id_bovino FK
        date fecha_pesaje
        time hora_pesaje
        decimal litros_obtenidos
    }

    eventos_reproductivos {
        string id_evento PK
        string id_bovino FK
        string tipo_evento "Parto, Celo_Observable, Inseminacion, Palpacion, Aborto"
        date fecha_evento
        int dias_abiertos_calc
    }
